@@ -90,6 +90,12 @@ __thiscall void Entity_NPC::load_graphics(bool param_1);
 "538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505383ec40a1????????33c58945??5657508d45??64a3????????8bf18b43":
 __thiscall void Entity_NPC::translate_gfx_path(std_string& returnString, std_string& input);
 
+"538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505381ec38010000a1????????33c58945??5657508d45??64a3????????8bf989bd":
+__thiscall void Entity_NPC::Hornfel_UpdateAI();
+
+"558bec83e4f85153568bf15783be????????0a":
+__thiscall void Entity_NPC::Hornfel_UpdateFrame();
+
 /*
 // Minecart functions
 "558bec51538bd98b8b":
