@@ -1,3 +1,7 @@
+v1.x.x -
+Bug fixes:
+	Fixed vanilla game crash caused by Hornfel trying to enter new door after losing minecart.
+/newline/
 v1.0.11b -
 Bug fixes:
 	- Fixed a crash that could occur randomly when using custom item pools
